WIP: Create RemoteDeviceServices.{Actions,Rpcs}
Provide proper encapsulation of action and RPC invocation strategies. We
do not define schema-less actions, as those cannot be supported, but
keep our options open for future.

Proper encapsulation gives us a guide as to what can be supported and
what cannot.

JIRA: NETCONF-930
Change-Id: I75f1cb67f50a295bbce6638009d663444a48ca9c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>