@@ -7,6 +7,8 @@
  */
 package org.opendaylight.netconf.sal.connect.netconf.sal;
 
+import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isNull;
@@ -20,9 +22,8 @@ import static org.opendaylight.netconf.sal.connect.netconf.util.NetconfMessageTr
 import static org.opendaylight.netconf.sal.connect.netconf.util.NetconfMessageTransformUtil.NETCONF_UNLOCK_QNAME;
 
 import java.net.InetSocketAddress;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -31,9 +32,9 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.opendaylight.mdsal.binding.runtime.spi.BindingRuntimeHelpers;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
-import org.opendaylight.mdsal.dom.api.DOMRpcService;
 import org.opendaylight.mdsal.dom.spi.DefaultDOMRpcResult;
 import org.opendaylight.netconf.api.NetconfMessage;
+import org.opendaylight.netconf.sal.connect.api.RemoteDeviceServices.Rpcs;
 import org.opendaylight.netconf.sal.connect.netconf.AbstractTestModelTest;
 import org.opendaylight.netconf.sal.connect.netconf.listener.NetconfSessionPreferences;
 import org.opendaylight.netconf.sal.connect.netconf.sal.tx.TxTestUtils;
@@ -51,7 +52,7 @@ import org.opendaylight.yangtools.yang.model.api.EffectiveModelContext;
 @RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
     @Mock
-    private DOMRpcService rpcService;
+    private Rpcs.Normalized rpcService;
     private AbstractNetconfDataTreeService netconService;
     private NetconfMessageTransformer netconfMessageTransformer;
     ArgumentCaptor<ContainerNode> captor = ArgumentCaptor.forClass(ContainerNode.class);
@@ -109,7 +110,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
         final NetconfMessage netconfMessage = netconfMessageTransformer.toRpcRequest(
                 NetconfMessageTransformUtil.NETCONF_EDIT_CONFIG_QNAME, captor.getValue());
-        Assert.assertTrue(netconfMessage.toString().contains("operation=\"merge\""));
+        assertThat(netconfMessage.toString(), containsString("operation=\"merge\""));
     }
 
     @Test
@@ -120,7 +121,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
         final NetconfMessage netconfMessage = netconfMessageTransformer.toRpcRequest(
                 NetconfMessageTransformUtil.NETCONF_EDIT_CONFIG_QNAME, captor.getValue());
-        Assert.assertTrue(netconfMessage.toString().contains("operation=\"replace\""));
+        assertThat(netconfMessage.toString(), containsString("operation=\"replace\""));
     }
 
     @Test
@@ -131,7 +132,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
         final NetconfMessage netconfMessage = netconfMessageTransformer.toRpcRequest(
                 NetconfMessageTransformUtil.NETCONF_EDIT_CONFIG_QNAME, captor.getValue());
-        Assert.assertTrue(netconfMessage.toString().contains("operation=\"create\""));
+        assertThat(netconfMessage.toString(), containsString("operation=\"create\""));
     }
 
     @Test
@@ -141,7 +142,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
         final NetconfMessage netconfMessage = netconfMessageTransformer.toRpcRequest(
                 NetconfMessageTransformUtil.NETCONF_EDIT_CONFIG_QNAME, captor.getValue());
-        Assert.assertTrue(netconfMessage.toString().contains("operation=\"delete\""));
+        assertThat(netconfMessage.toString(), containsString("operation=\"delete\""));
     }
 
     @Test
@@ -151,7 +152,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
         final NetconfMessage netconfMessage = netconfMessageTransformer.toRpcRequest(
                 NetconfMessageTransformUtil.NETCONF_EDIT_CONFIG_QNAME, captor.getValue());
-        Assert.assertTrue(netconfMessage.toString().contains("operation=\"remove\""));
+        assertThat(netconfMessage.toString(), containsString("operation=\"remove\""));
     }
 
     @Test
@@ -162,7 +163,7 @@ public class NetconfDataTreeServiceImplTest extends AbstractTestModelTest {
 
     private AbstractNetconfDataTreeService getNetconService() {
         NetconfSessionPreferences prefs = NetconfSessionPreferences.fromStrings(
-                Collections.singletonList(NetconfMessageTransformUtil.NETCONF_CANDIDATE_URI.toString()));
+                List.of(NetconfMessageTransformUtil.NETCONF_CANDIDATE_URI.toString()));
         final RemoteDeviceId id =
                 new RemoteDeviceId("device-1", InetSocketAddress.createUnresolved("localhost", 17830));
         return AbstractNetconfDataTreeService.of(id, new EmptyMountPointContext(SCHEMA_CONTEXT), rpcService, prefs);
